# thrift_helloworld

./: .gitignore  CMakeLists.txt  README.md  client.cpp  common.thrift  helloworld.thrift  server.cpp
